--- a/MySportsDiary/Base.lproj/Main.storyboard
+++ b/MySportsDiary/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9iu-Ne-MxW">
                                         <rect key="frame" x="0.0" y="391" width="560" height="56"/>
                                         <color key="backgroundColor" red="0.59215686270000001" green="0.84313725490000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Next">
+                                        <state key="normal" title="NEXT">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -116,12 +116,12 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ekE-3g-LTe" userLabel="AddButton">
                                 <rect key="frame" x="20" y="493" width="560" height="50"/>
-                                <color key="backgroundColor" red="0.59215686270000001" green="0.84313725490000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <accessibility key="accessibilityConfiguration" identifier="AddButton" label="AddButton"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="94C-Jr-PYr"/>
                                 </constraints>
-                                <state key="normal" title="Add entry">
+                                <state key="normal" title="SAVE">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -843,7 +843,7 @@
                             </label>
                             <tableView clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LOv-pc-pq6">
                                 <rect key="frame" x="0.0" y="138" width="600" height="405"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="eventCellContent" textLabel="Xcx-OV-B4O" detailTextLabel="80f-sT-7bZ" style="IBUITableViewCellStyleSubtitle" id="h44-mM-Uwi">
                                         <rect key="frame" x="0.0" y="28" width="600" height="44"/>
@@ -956,8 +956,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="XZz-6R-0bs" kind="relationship" relationship="viewControllers" id="ycc-Nq-uEn"/>
-                        <segue destination="cLT-0y-iCz" kind="relationship" relationship="viewControllers" id="35D-I7-6sP"/>
                         <segue destination="fFR-Mt-FWC" kind="relationship" relationship="viewControllers" id="CyE-ws-hoX"/>
+                        <segue destination="cLT-0y-iCz" kind="relationship" relationship="viewControllers" id="35D-I7-6sP"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -997,26 +997,15 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qzt-oX-rkZ">
-                                <rect key="frame" x="0.0" y="513" width="600" height="30"/>
-                                <color key="backgroundColor" red="0.59215686270000001" green="0.84313725490000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="SEND"/>
-                                <connections>
-                                    <action selector="onSendPressed:" destination="SN9-zF-AZY" eventType="touchUpInside" id="P7f-ng-pBf"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="eGO-aR-N2l" firstAttribute="top" secondItem="YmQ-Lb-w3J" secondAttribute="bottom" constant="265" id="6n3-Bm-9oR"/>
                             <constraint firstItem="eGO-aR-N2l" firstAttribute="leading" secondItem="b4z-xb-da7" secondAttribute="leadingMargin" constant="8" id="B1n-f1-990"/>
-                            <constraint firstItem="qzt-oX-rkZ" firstAttribute="leading" secondItem="b4z-xb-da7" secondAttribute="leading" id="DVd-a1-et4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="sZv-E5-9HB" secondAttribute="trailing" id="Dnw-nF-OIc"/>
                             <constraint firstItem="sZv-E5-9HB" firstAttribute="leading" secondItem="b4z-xb-da7" secondAttribute="leadingMargin" id="Md9-4M-Eod"/>
                             <constraint firstItem="sZv-E5-9HB" firstAttribute="top" secondItem="YmQ-Lb-w3J" secondAttribute="bottom" constant="130" id="Pwa-1i-rlu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eGO-aR-N2l" secondAttribute="trailing" constant="8" id="VNT-FB-wod"/>
-                            <constraint firstAttribute="trailing" secondItem="qzt-oX-rkZ" secondAttribute="trailing" id="WgV-s1-yHS"/>
-                            <constraint firstItem="Obc-kJ-r5S" firstAttribute="top" secondItem="qzt-oX-rkZ" secondAttribute="bottom" constant="8" id="aSW-0P-dIg"/>
                             <constraint firstItem="eGO-aR-N2l" firstAttribute="centerX" secondItem="b4z-xb-da7" secondAttribute="centerX" id="dMC-Pc-uLb"/>
                             <constraint firstItem="sZv-E5-9HB" firstAttribute="centerX" secondItem="b4z-xb-da7" secondAttribute="centerX" id="sci-0z-Yk5"/>
                         </constraints>
@@ -1026,7 +1015,6 @@
                     <connections>
                         <outlet property="beginButton" destination="eGO-aR-N2l" id="9AT-e4-sSj"/>
                         <outlet property="mainLabel" destination="sZv-E5-9HB" id="zB9-mt-shB"/>
-                        <outlet property="sendButton" destination="qzt-oX-rkZ" id="H8L-p7-jkR"/>
                         <segue destination="KBN-8C-xNN" kind="show" identifier="AgeAndGenderSegue" id="EQZ-N2-YRl"/>
                         <segue destination="pbZ-6v-qqf" kind="show" identifier="QuestionnaireSegue" id="eUc-fk-lPY"/>
                     </connections>
@@ -1170,7 +1158,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="nev-P0-Me2"/>
                                 </constraints>
-                                <state key="normal" title="Next">
+                                <state key="normal" title="NEXT">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -1452,7 +1440,7 @@
         <image name="video-cam" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LJD-S7-dqK"/>
         <segue reference="eUc-fk-lPY"/>
+        <segue reference="LJD-S7-dqK"/>
     </inferredMetricsTieBreakers>
 </document>
