--- a/MySportsDiary/Base.lproj/LaunchScreen.storyboard
+++ b/MySportsDiary/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rugby-40781_1280" translatesAutoresizingMaskIntoConstraints="NO" id="t6g-qM-J1r">
+                                <rect key="frame" x="20" y="20" width="560" height="580"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="t6g-qM-J1r" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="4LV-DH-sDY"/>
+                            <constraint firstItem="t6g-qM-J1r" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="7kn-l5-4JB"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="t6g-qM-J1r" secondAttribute="bottom" id="Ct6-iR-bS3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="t6g-qM-J1r" secondAttribute="trailing" id="oh7-AF-cWM"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +36,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="rugby-40781_1280" width="1280" height="1256"/>
+    </resources>
 </document>
